# monadc

./: .#TODO.org  .gitignore  CMakeLists.txt  Macros  Main.mon  Makefile  Math.mon  README.md  README.org  TODO.org  arena.c  arena.h  asm.c  asm.h  buildsystem.c  buildsystem.h  bytecode.c  bytecode.h  cli.c  cli.h  codegen.c  codegen.h  compat.h  completion.c  completion.h  config.c  config.h  context-visualizer.py  context.org  create_asm_tests.py  create_asm_tests_extra.py  debugger.c  debugger.h  dep.c  dep.h  env.c  env.h  features.c  features.h  ffi.c  (+44 more)
.github/workflows/: ci.yml
context/: README.org  arena.org  asm.org  build.org  buildsystem.org  bytecode.org  category-context.org  cli.org  codegen-ops.org  codegen.org  commit-format.org  completion.org  connections.org  context.org  core-libs.org  coverage-roadmap.org  curation.org  debug-agenda.org  dep.org  env.org  etc-assets.org  features.org  ffi.org  garden.org  guidelines.org  how-to.org  ideas.org  index.org  infer.org  inventory.org  language.org  lsp.org  macro.org  main-mon.org  main.org  makefile.org  module-export.org  module.org  navigation.org  opinions.org  (+23 more)
context/category/: catface-static-report.org  catface.org  functors.tsv  generated-report.org  index.org  information-theory.org  interfaces.org  mathematics.org  morphisms.tsv  objects.tsv  query-language.org  schema.json  taxonomy.org  test.mon  tui.org  type-system.org
context/info/: advanced-types.org  advanced-wisp.org  arena.org  arithmetic.org  arrays.org  asm.org  booleans.org  build.org  casting.org  cli.org  control.org  data.org  equality.org  error-handling.org  from-c.org  from-lisp.org  functional-programming.org  heap.org  index.org  intro.org  lambda.org  let.org  logic.org  macros.org  modules.org  mutation.org  numeric.org  pair.org  paths.org  performance.org  purity.org  range.org  recursion.org  refinements.org  repl.org  set.org  show.org  stdlib.org  style.org  symbols.org  (+5 more)
context/tools/: context_graph.py  context_lint.py
context/visualizer/: app.js  index.html  styles.css
core/: Ascii.mon  Assert.mon  Char  Char.mon  Glfw  Glfw.mon  IO.mon  Int.mon  Json.mon  List.mon  Math  Math.mon  Prelude.mon  PreludeProbe.mon  Random.mon  Set.mon  Subr.mon  Term.mon  html.mon  json.mon  test.mon
core-frozen/: Ascii.mon  CORE_NOTES.md  CORE_STYLE.org  MODULES.md  Math.mon  Prelude.mon  README.md  Term.mon
core-frozen/Control/: Monad.mon
core-frozen/Data/: Bool.mon  Char.mon  Either.mon  Json.mon  List.mon  Maybe.mon  Ord.mon  Set.mon  Tuple.mon
core-frozen/Numeric/: Math.mon
core-frozen/prelude/: Class.mon  Coll.mon  Function.mon  Numeric.mon
core/Control/: Arrow.mon
core/Data/: List.mon  ListImport.mon  Set.mon
core/Engine/: Engine.mon
core/prelude/: Coll  Coll.mon  Function  Function.mon  Numeric.mon  Sequence.mon  Test
core/text/: Ascii.ll  Ascii.mon  String.mon  Test.mon
etc/: colorscheme.txt  docs.html
help/: .gitignore  README.md  package.yaml
help/src/: Main.mon
how_to/: AlgebraicDataTypes  AlgebraicDataTypes.mon  Caesar.mon  Char  Char.mon  Donut.mon  GlfwSpeedrun.mon  Iter  Iter.mon  Layouts.mon  Loops  Macros  Macros.mon  QuickCheck.mon  RaylibSpeedrun  RaylibSpeedrun.mon  RefinementType  RefinementType.mon  SdlSpeedrun.mon  Syntax.mon  Test  Test.mon  a.out  experiment.mon
how_to/Term/: Font.mon  Renderer.mon  Term  Term.mon  text.frag  text.vert
info/: advanced-types.org  advanced-wisp.org  arena.org  arithmetic.org  arrays.org  asm.org  booleans.org  build.org  casting.org  characters.org  cli.org  coll-module.org  collections.org  conditionals.org  contributing.org  control.org  core.org  data.org  define.org  dependent-types.org  equality.org  error-handling.org  errors.org  faq.org  ffi.org  from-c.org  from-haskell.org  from-lisp.org  functional-programming.org  fuzzing.org  heap.org  index.org  intro.org  iteration.org  lambda.org  layouts.org  let.org  list.org  literate.org  logic.org  (+35 more)
old-core/: List.mon  README.org  Set.mon  TODO.mon
old-core/prelude/: Coll.mon  Test.mon
old-core/text/: Ascii  Ascii.mon
tests/: .gitignore  .last-first-failure.org  CHANGELOG.md  MANIFEST.md  TIERS.md  language_corpus.tsv  main.py  monad_binary.py  path_heap_literals.desugar  path_heap_literals.json  path_heap_literals.mon  path_heap_literals.org  path_heap_literals.stdout  quote-quasiquote-unquote  quote-quasiquote-unquote.mon  quote-quasiquote-unquote.stdout  reader-atoms.golden.jsonl  reader-atoms.tsv  reader-interactions.tsv  reader-refinements.tsv  reader-sugars.tsv  reader-supersets.tsv  run.py  run_core.py  run_laws.py  test_anonymous_finite_types.org  test_anonymous_finite_types.py  test_bytecode.py  test_check_laws.py  test_checkout_local_paths.py  test_class_laws.py  test_cli_duality.py  test_cmake_build.py  test_context_graph.py  test_context_lint.py  test_context_refs.py  test_context_visualizer.py  test_core_abstraction_ownership.py  test_core_api_dry.py  test_core_standalone_compile.py  (+25 more)
tests/codegen/: MANIFEST.md  arithmetic_add.mon  arithmetic_div.mon  arithmetic_mixed.mon  arithmetic_mod.mon  arithmetic_mul.mon  arithmetic_negate.mon  arithmetic_sub  arithmetic_sub.mon  boolean_and.mon  boolean_not.mon  boolean_ops.mon  boolean_or.mon  comparison_eq.mon  comparison_ge.mon  comparison_gt.mon  comparison_le.mon  comparison_lt.mon  comparison_ne.mon  comparison_ops.mon  cond_expression.mon  cond_nested.mon  cond_test.mon  define_and_show.mon  empty-file.mon  function_call.mon  identity_show.mon  if_branch.mon  if_else.mon  lambda_call.mon  lambda_multi_arg.mon  lambda_typed.mon  let_binding.mon  list_ops.mon  list_ops_car_cdr.mon  multi_define.mon  nested_arithmetic.mon  nested_call.mon  nested_if_else.mon  pattern_match  (+409 more)
tests/docs/: context_links.tsv  inventory.json  menu_tree.md  quality_report.md  tier_manifest.tsv
tests/fuzzing/: .fuzz-history.json  .fuzz-results.json  .gitignore  .last-first-failure.org  README.md  fuzz_codegen.py  fuzz_fuzzing.py
tests/wisp/: rt_wisp_basic.mon  rt_wisp_comparison.mon  rt_wisp_define_parenthesized_signature  rt_wisp_define_value.mon  (+12 more)
(+8015 files in other folders)
